--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,7 +39,26 @@
     max-height: 15rem;
 }
 .image-card img{
-    display: table-cell;
+    display : flex;
+    align-items : center;
     // max-height: 10rem;
+}
+.btn-card{
+    background-color: #21252917;
+    border: none;
+    outline:none;
+    transition: all .2s ease-in-out;
+    cursor:pointer;
+}
+.btn-card:hover{
+    transform: scale(1.1);
+    -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
+    -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
+    color:#000000;
+    font-weight: bold;
+}
+.panel-derecha{
+    height: 100%;
 }
 
