--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -50,6 +50,12 @@
     transition: all .2s ease-in-out;
     cursor:pointer;
 }
+.btn-outline-info:hover {
+    color: #ffffff;
+}
+.card-select{
+    overflow: visible !important;
+}
 .btn-card:hover{
     transform: scale(1.1);
     -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
