--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10661,10 +10661,12 @@ a.text-dark:focus {
 }
 
 .img-circle-2 {
+  background-color: white;
   display: table-cell;
   border-radius: 50%;
   width: 8rem;
   height: 8rem;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.8);
 }
 
 .btn-form {
@@ -10720,6 +10722,10 @@ a.text-dark:focus {
 
 .panel-derecha {
   height: 100%;
+}
+
+.card-home {
+  min-height: 12rem;
 }
 
 #mediaFile {
