--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,10 +13,14 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 .img-circle-2 {
+    background-color:white;
     display:table-cell;
     border-radius: 50%;
     width: 8rem;
     height: 8rem;
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.8);
+-moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.8);
+box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.8);
 }
 .btn-form{
 	color:#1b1b1b;
@@ -66,6 +70,9 @@
 }
 .panel-derecha{
     height: 100%;
+}
+.card-home{
+    min-height: 12rem;
 }
 
 #mediaFile {
