--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -48,11 +48,16 @@ box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.8);
     // max-height: 10rem;
 }
 .btn-card{
-    background-color: #21252917;
+    background-color: #0abab5;
     border: none;
+    color: #ffffff;
+    font-weight: bolder;
     outline:none;
     transition: all .2s ease-in-out;
     cursor:pointer;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
 }
 .btn-outline-info:hover {
     color: #ffffff;
