--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10669,6 +10669,10 @@ a.text-dark:focus {
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.8);
 }
 
+.transparencia1 {
+  background-color: rgba(0, 0, 0, 0);
+}
+
 .btn-form {
   color: #1b1b1b;
   border: none;
