--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,9 @@
   background-color: $blue;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+// .content-header{
+//     background-color: rgba(0,0,0,0.3);
+// }
 .img-circle-2 {
     background-color:white;
     display:table-cell;
@@ -21,6 +24,9 @@
     -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.8);
 -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.8);
 box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.8);
+}
+.transparencia1{
+    background-color: rgba(0,0,0,0);
 }
 .btn-form{
 	color:#1b1b1b;
