--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background-color: #354152;
+  background-color: #e7ebf1;
   color: #7e8ba3;
   font: 300 1rem/1.5 Helvetica Neue, sans-serif;
   margin: 0;
